tempfile/auto_impl/tests/compile-fail/fn_associated_type.rs
use auto_impl::auto_impl;


#[auto_impl(Fn)]
trait Foo {
    type Out;

    fn a(&self);
}


fn main() {}
